# threat-intel

./: Cargo.toml  README.md  golem.yaml
api-definition/: definition.yaml
centroid/: Cargo.toml  golem.yaml
centroid/src/: bindings.rs  lib.rs  local_model.rs
centroid/wit/: centroid.wit
centroid/wit-generated/: centroid.wit
cluster/: Cargo.toml  golem.yaml
cluster/src/: bindings.rs  lib.rs
cluster/wit/: cluster.wit
cluster/wit-generated/: cluster.wit
embedder-server/: Cargo.toml
embedder-server/src/: main.rs
embeddings/: Cargo.toml  golem.yaml
embeddings/src/: bindings.rs  lib.rs
embeddings/wit/: embeddings.wit
embeddings/wit-generated/: embeddings.wit
llm/: Cargo.toml  golem.yaml
llm/src/: bindings.rs  lib.rs
llm/wit/: llm.wit
llm/wit-generated/: llm.wit
raw/: Cargo.toml  golem.yaml
raw/src/: bindings.rs  lib.rs
raw/wit/: raw.wit
raw/wit-generated/: raw.wit
testing/: instructions.md
