[package]
name = "centroid"
version = "0.1.0"
edition = "2021"

[package.metadata.component.target]
path = "wit-generated"

[package.metadata.component.target.dependencies."rag:centroid-exports"]
path = "wit-generated/deps/rag_centroid-exports"

[dependencies]
serde_json = "1.0.138"

[dependencies.linfa]
version = "0.7.1"
features = ["serde_crate", "serde"]

[dependencies.linfa-clustering]
version = "0.7.1"
features = ["serde", "serde_crate"]

[dependencies.linfa-nn]
version = "0.7.1"
features = ["serde", "serde_crate"]

[dependencies.ndarray]
version = "0.15.3"

[dependencies.serde]
version = "1.0.217"
features = ["derive"]

[dependencies.wit-bindgen-rt]
version = "0.37.0"
features = ["bitflags"]

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
required-features = []
