[package]
name = "embeddings"
version = "0.1.0"
edition = "2021"

[package.metadata.component.target]
path = "wit-generated"

[package.metadata.component.target.dependencies."rag:embeddings-exports"]
path = "wit-generated/deps/rag_embeddings-exports"

[dependencies.golem-rust]
version = "1.2.1"

[dependencies.reqwest]
git = "https://github.com/zivergetech/reqwest"
branch = "update-jun-2024"
features = ["json"]

[dependencies.serde]
version = "1.0.217"
features = ["derive"]

[dependencies.serde_derive]
version = "1.0.217"

[dependencies.wit-bindgen-rt]
version = "0.37.0"
features = ["bitflags"]

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
required-features = []
