[package]
name = "raw"
version = "0.1.0"
edition = "2021"

[package.metadata.component.target]
path = "wit-generated"

[package.metadata.component.target.dependencies."golem:rpc"]
path = "wit-generated/deps/wasm-rpc"

[package.metadata.component.target.dependencies."rag:centroid-client"]
path = "wit-generated/deps/rag_centroid-client"

[package.metadata.component.target.dependencies."rag:centroid-exports"]
path = "wit-generated/deps/rag_centroid-exports"

[package.metadata.component.target.dependencies."rag:cluster-client"]
path = "wit-generated/deps/rag_cluster-client"

[package.metadata.component.target.dependencies."rag:cluster-exports"]
path = "wit-generated/deps/rag_cluster-exports"

[package.metadata.component.target.dependencies."rag:embeddings-client"]
path = "wit-generated/deps/rag_embeddings-client"

[package.metadata.component.target.dependencies."rag:embeddings-exports"]
path = "wit-generated/deps/rag_embeddings-exports"

[package.metadata.component.target.dependencies."rag:llm-client"]
path = "wit-generated/deps/rag_llm-client"

[package.metadata.component.target.dependencies."rag:llm-exports"]
path = "wit-generated/deps/rag_llm-exports"

[package.metadata.component.target.dependencies."rag:raw-exports"]
path = "wit-generated/deps/rag_raw-exports"

[package.metadata.component.target.dependencies."wasi:io"]
path = "wit-generated/deps/io"

[dependencies]
regex = "1.11.1"
serde_json = "1.0.138"

[dependencies.linfa]
version = "0.7.1"
features = ["serde_crate", "serde"]

[dependencies.linfa-clustering]
version = "0.7.1"
features = ["serde", "serde_crate"]

[dependencies.linfa-nn]
version = "0.7.1"
features = ["serde", "serde_crate"]

[dependencies.ndarray]
version = "0.15.3"

[dependencies.rust-tfidf]
version = "1.1.0"

[dependencies.serde]
version = "1.0.217"
features = ["derive"]

[dependencies.uuid]
version = "1.12.1"
features = ["v4"]

[dependencies.wit-bindgen-rt]
version = "0.37.0"
features = ["bitflags"]

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
required-features = []
